src/objects/eRebate_Product__c.object
<CustomObject>
    <description>It will store eRebate Products(Line Items).</description>
    <fields>
        <fullName>Actual_Cost_Text__c</fullName>
        <description>1511 Release - SIR 483. To represent the real number of Actual Cost.</description>
        <formula>IF( 
Actual_Cost__c &lt; 1, 
&quot;0&quot;+TEXT(Actual_Cost__c), 
TEXT(Actual_Cost__c) 
)</formula>
        <label>Actual Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used to capturing more Rebate information.</description>
        <label>Actual Cost (R)</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>Product__r.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Cost_Text__c</fullName>
        <description>1511 Release - SIR 483. To represent the real number of Booking Cost.</description>
        <formula>IF( 
Booking_Cost__c &lt; 1, 
&quot;0&quot;+TEXT(Booking_Cost__c), 
TEXT(Booking_Cost__c) 
)</formula>
        <label>Booking Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Cost__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used to capturing more Rebate information.</description>
        <label>Booking Cost (R)</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capped_Payout__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used for capturing more Rebate information.</description>
        <label>Capped Payout</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disti_Margin__c</fullName>
        <description>1508 Release. Request by Paulein Ng. It&apos;s used for capturing more Rebate information.</description>
        <formula>IF(
Resale_Price__c &gt; 0, 
(Resale_Price__c  - Actual_Cost__c ) / Resale_Price__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disti Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used for capturing more Rebate information.</description>
        <label>End Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Accrual_to_be_set_per_Rebate_Period__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used for capturing more Rebate information.</description>
        <formula>IF(
 eRebate__r.RecordType.Name = &quot;Incentive / T&amp;Cs&quot; &amp;&amp; Estimated_POA_net_net_per_MAG_Level__c   &gt; 0,
 Capped_Payout__c  / Estimated_POA_net_net_per_MAG_Level__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Est Accrual to be set per Rebate Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_POA_net_net_per_MAG_Level__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used for capturing more Rebate information.</description>
        <label>Estimated POA net net per MAG Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Rebate_Amount__c</fullName>
        <description>1508 Release. It&apos;s auto calculated field with ODM Fullfillment Rebate &amp; OEM / EMS Rebate. For Incentive Rebate, it&apos;s free text.</description>
        <label>Estimated Rebate Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Rep_Country__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used for capturing more Rebate information.</description>
        <label>Local Rep Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMEC</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea (South)</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <formula>Product__r.MAG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Gap__c</fullName>
        <label>Price Gap</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>1508 Release. Request by Pauline Ng.</description>
        <formula>Product__r.Product_Type__c</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>eRebate_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_Cost_in_Rebate_Currency__c</fullName>
        <label>Real Cost in Rebate Currency</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Record_Type__c</fullName>
        <description>1508 Release. Technical use only.</description>
        <formula>eRebate__r.RecordType.Name</formula>
        <label>Rebate Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resale_Price_Text__c</fullName>
        <description>1511 Release - SIR 483. To represent the real number of Resale Price.</description>
        <formula>IF( 
 Resale_Price__c &lt; 1, 
&quot;0&quot;+TEXT(Resale_Price__c ), 
TEXT(Resale_Price__c ) 
)</formula>
        <label>Resale Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resale_Price__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used to capturing more Rebate information.</description>
        <label>Resale Price (R)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Total_USD__c</fullName>
        <formula>Sub_Total__c /   IF( ISBLANK(eRebate__r.Locked_Exchange_Rate__c ) ,  1 , eRebate__r.Locked_Exchange_Rate__c )</formula>
        <label>Sub Total (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <formula>Quantity__c * Price_Gap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X12NC__c</fullName>
        <formula>Product__r.Sales_Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12NC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eRebate__c</fullName>
        <label>eRebate</label>
        <referenceTo>eRebate__c</referenceTo>
        <relationshipName>eRebate_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rebate Product</label>
    <nameField>
        <displayFormat>eRP-{0000}</displayFormat>
        <label>eRebate Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Products</pluralLabel>
    <recordTypes>
        <fullName>Distribution_ODM_Fullfillment_Rebate_Product</fullName>
        <active>true</active>
        <description>Rebate Product for Distribution ODM Fullfillment Rebate</description>
        <label>Distribution ODM Fullfillment Rebate Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incentive_T_Cs_Contractual_Rebate_Product</fullName>
        <active>true</active>
        <description>Rebate Product for Incentive / T&amp;Cs / Contractual Rebate</description>
        <label>Incentive / T&amp;Cs / Contractual Rebate Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>OEM_EMS_Rebate_Product</fullName>
        <active>true</active>
        <description>Rebate Product for OEM / EMS Rebate</description>
        <label>OEM / EMS Rebate Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CappedPayout_more_than_Estimated_Rebate</fullName>
        <active>true</active>
        <description>1508 Release. Capped Payout (USD) should be more than Estimated Rebate Amount</description>
        <errorConditionFormula>Capped_Payout__c &lt;  Estimated_Rebate_Amount__c</errorConditionFormula>
        <errorDisplayField>Capped_Payout__c</errorDisplayField>
        <errorMessage>Capped Payout should be more than Estimated Rebate Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rebate_Product_record_type_not_aligned</fullName>
        <active>true</active>
        <description>1508 Release. Rebate Product record type does not align with Rebate Program Type.</description>
        <errorConditionFormula>OR(
AND(
 eRebate__r.RecordType.Name = &quot;Distribution ODM Fullfillment&quot;,
 RecordType.Name &lt;&gt; &quot;Distribution ODM Fullfillment Rebate Product&quot;
),
AND(
 eRebate__r.RecordType.Name = &quot;Incentive / T&amp;Cs&quot;,
 RecordType.Name &lt;&gt; &quot;Incentive / T&amp;Cs / Contractual Rebate Product&quot;
),
AND(
 eRebate__r.RecordType.Name = &quot;OEM / EMS&quot;,
 RecordType.Name &lt;&gt; &quot;OEM / EMS Rebate Product&quot;
)
)</errorConditionFormula>
        <errorMessage>Rebate Product record type does not align with Rebate Program Type. Please click &quot;cancel&quot; and go back to the original Rebate to re-create Rebate Product(s).</errorMessage>
    </validationRules>
</CustomObject>